hphp/hack/test/typecheck/modules/internal_outside_module.php
<?hh

internal function f(): void {}

internal class A {
  internal function g(): void {}
}

<<__Internal>>
type Foobar = int;
